@@ -3,6 +3,7 @@ package mobi.chouette.dao;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+import java.util.NoSuchElementException;
 
 import javax.persistence.Cache;
 import javax.persistence.EntityManager;
@@ -116,12 +117,13 @@ public abstract class 	GenericDAOImpl<T> implements GenericDAO<T> {
 		if (objectIds.isEmpty())
 			return null;
 
+		// When there is only one objectId, it is faster to lookup by natural id as done in the findByObjectId() method.
 		if(objectIds.size() == 1) {
-			T entity = findByObjectId(objectIds.stream().findFirst().orElseThrow());
+			T entity = findByObjectId(objectIds.stream().findFirst().orElseThrow(NoSuchElementException::new));
 			if(entity == null) {
 				return Collections.emptyList();
 			} else {
-				return List.of(entity);
+				return Collections.singletonList(entity);
 			}
 		}
 
